# gameplan-backend

./: .env  README.md  pyproject.toml
apps/entities/migrations/: 0001_initial.py
apps/entities/models/: __init__.py  entities.py  entity_type.py
apps/users/: authentication.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  users.py
apps/users/serializers/: __init__.py  user.py
apps/users/views/: __init__.py  auth_views.py
booking_platform/: asgi.py  settings.py  urls.py  wsgi.py
